# codifide-programming-language

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CodifideEcoSystem.code-workspace  Dockerfile  GETTING_STARTED.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  content_classifier.cod  escalation_router.cod  fly.toml  moderation_gate.cod  moderation_pipeline.cod  pipeline_composed.cod  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.playwright-mcp/: page-2026-05-13T14-19-41-374Z.yml  page-2026-05-13T14-23-53-300Z.yml  page-2026-05-13T14-52-32-244Z.yml  page-2026-05-13T14-58-52-763Z.yml  page-2026-05-13T16-52-01-072Z.yml  page-2026-05-13T16-53-30-544Z.yml  page-2026-05-13T17-00-37-825Z.yml  page-2026-05-13T17-02-21-491Z.yml  page-2026-05-13T17-04-22-850Z.yml
codifide/: __init__.py  __main__.py  capability.py  dispatch_index.py  server.py
crates/codifide-canonical/: Cargo.toml
crates/codifide-canonical/src/: ast.rs  canonical.rs  cbor.rs  cbor_decoder.rs  error.rs  json.rs  lib.rs
crates/codifide-canonical/tests/: fuzz_canonical.rs
crates/codifide-interpreter/: Cargo.toml
crates/codifide-interpreter/benches/: interpreter.rs
crates/codifide-interpreter/src/: errors.rs  interpreter.rs  lib.rs  parallel.rs  primitives.rs  value.rs
crates/codifide-interpreter/src/parser/: expr_parser.rs  lexer.rs  mod.rs  tokens.rs
crates/noema-canonical/: Cargo.toml
crates/noema-canonical/src/: ast.rs  canonical.rs  cbor.rs  error.rs  json.rs  lib.rs
dispatches/: 2026-05-10-capability-journal.md  2026-05-10-capability.readout.md  2026-05-10-capability.yaml  2026-05-10-cbor-audit.md  2026-05-10-cbor-post-audit.readout.md  2026-05-10-cbor-post-audit.yaml  2026-05-10-cbor.readout.md  2026-05-10-cbor.yaml  2026-05-10-content-imports.readout.md  2026-05-10-content-imports.yaml  2026-05-10-fuzz-audit.md  2026-05-10-index-audit.md  2026-05-10-indices.readout.md  2026-05-10-indices.yaml  2026-05-10-polish.readout.md  2026-05-10-polish.yaml  2026-05-10-post-audit.readout.md  2026-05-10-post-audit.yaml  2026-05-10-rename-journal.md  2026-05-10-rename.readout.md  2026-05-10-rename.yaml  2026-05-10-rust-canonical.readout.md  2026-05-10-rust-canonical.yaml  2026-05-10-security-audit.md  2026-05-10-symbol-store.readout.md  2026-05-10-symbol-store.yaml  2026-05-10-v0-snapshot.readout.md  2026-05-10-v0-snapshot.yaml  2026-05-11-ai-agent-language-review.md  2026-05-11-ai-generated-programs-feedback.md  2026-05-11-assessment-six-programs.md  2026-05-11-carryover-decisions.readout.md  2026-05-11-carryover-decisions.yaml  2026-05-11-carryover-post.readout.md  2026-05-11-carryover-post.yaml  2026-05-11-cbor-numeric-boundaries.md  2026-05-11-cbor-reaudit.md  2026-05-11-claude-opus-4-7-language-review.md  2026-05-11-claude-opus-4-7-programs-feedback.md  2026-05-11-cli-audit.md  (+197 more)
docs/: AGENT_COOKBOOK.md  AGENT_QUICKREF.md  AGENT_TASK_SPEC.md  ARCHITECTURE.md  CANONICAL.md  CAPABILITY.md  DEPLOY.md  DEPLOY_VERCEL.md  FOR_AGENTS.md  GPT4O_PROMPT.md  LANGUAGE.md  REGISTRY.md  ROADMAP.md  RPC_API.md  RUST.md  STORE.md  TUTORIAL.md  capability-0.1.json
examples/: batch_classify.cod  classify.cod  classify.nm  greet.cod  greet.nm  imports_demo.cod  imports_demo.nm  parking_sign.cod  quickstart.cod  recursive_sum.cod  sort.nm  text_stats.cod  unicode.nm
noema/: __init__.py  __main__.py  capability.py
rfcs/: 0001-formal-semantics-gaps.md  0002-semantic-invariants.md  0003-epistemic-state-model.md  README.md
scripts/: rename-project-directory.sh  seed_registry.sh
sessions/: 2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14-overnight.md  2026-05-14-v3.md  2026-05-14.md  2026-05-15.md
tests/: test_bind_before_when.py  test_bottom_reason.py  test_canonical.py  test_capability.py  test_cbor.py  test_cbor_boundaries.py  test_imports.py  (+25 more)
(+121 files in other folders)
