[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codifide"
version = "0.1.0"
description = "A programming language for agentic AI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Codifide contributors" },
]
keywords = ["programming-language", "agentic-ai", "canonical-form"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Compilers",
]

[project.scripts]
codifide = "codifide.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codifide*"]
exclude = ["tests*", "examples*", "docs*", "dispatches*"]
