[package]
name = "codifide-canonical"
version = "1.0.0"
edition = "2021"
description = "Codifide canonical form: typed hypergraph with JSON projection and content addressing."
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "codifide-canonical"
path = "src/bin/codifide_canonical.rs"

[dependencies]
serde_json = "1"
sha2 = "0.10"
