[package]
name = "codifide-interpreter"
version = "2.0.0"
edition = "2021"
description = "Codifide tree-walking interpreter — Rust production runtime."
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "codifide-run"
path = "src/bin/codifide_run.rs"

[dependencies]
codifide-canonical = { path = "../codifide-canonical" }
serde_json = "1"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interpreter"
harness = false
