[package]
name = "noema-canonical"
version = "0.1.0"
edition = "2021"
description = "Noema canonical form: typed hypergraph with JSON projection and content addressing."
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "noema-canonical"
path = "src/bin/noema_canonical.rs"

[dependencies]
serde_json = "1"
sha2 = "0.10"
